@@ -1,3 +1,7 @@
+2008-07-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* bfd.c (bfd_demangle): Always trim off bfd_get_symbol_leading_char.
+
 2008-07-02  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-ppc.c (is_pic_glink_stub): New function.
